--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <img src="https://status.salesforce.com/images/home.svg" alt="" class="w-12 h-12">
             </div>
             <div>
-                <img src="https://cdn.icon-icons.com/icons2/3237/PNG/512/streaming_video_chatting_facebook_watch_social_media_application_icon_197387.png" alt="" class="w-12 h-12">
+                <img src="https://cdn-icons-png.flaticon.com/512/4406/4406139.png" alt="" class="w-12 h-12">
             </div>
             <div>
                 <img src="https://cdn0.iconfinder.com/data/icons/social-media-glyph-1/64/Facebook_Social_Media_User_Interface-39-512.png" alt="" class="w-12 h-12">
